--- a/Assignments/Exercise2TrujilloAlissa.ipynb
+++ b/Assignments/Exercise2TrujilloAlissa.ipynb
@@ -2,7 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DSC 530\n",
+    "# Week 2 Assignment: Preparing for Exploratory Data Analysis\n",
+    "# Author: Alissa Trujillo\n",
+    "# June 14, 2022"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
