Finished final project

--- a/Assignments/FinalProject/FinalProjectAlissaTrujillo.ipynb
+++ b/Assignments/FinalProject/FinalProjectAlissaTrujillo.ipynb
@@ -1172,7 +1172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at the results of our regression, we can see that there is a p-value under p=0.05 for each of the measured variables with the exception of pH. This means that Volatile Acidity, Citric Acid, Residual Sugar, Density, pH and Alcohol all have a significant effect on the quality of a wine. Since quality is measured after wine is brewed, when all of these factors are already measured, we can confidently say that there is a one-directional causal relationship."
+    "Looking at the results of our regression, we can see that there is a p-value under p=0.05 for each of the measured variables with the exception of residual sugar. This means that volatile acidity, citric acid, density, pH and alcohol content all have a significant effect on the quality of a wine. Since quality is measured after wine is brewed, when all of these factors are already measured, we can confidently say that there is a one-directional causal relationship."
    ]
   }
  ],
